fix: main.go (シンプルな状態に修正)

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>Sample</title>
+    <title>Sample App</title>
   </head>
   <body>
-    <h1>{{.data}}</h1>
+    <h1>Hello {{.data}}!!!</h1>
   </body>
 </html>
