--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,9 @@
   </head>
   <body>
     <h1>Hello {{.data}}!!!</h1>
+    {{ range.book }}
+    {{.Title}}
+    {{.Description}}
+    {{ end }}
   </body>
 </html>
