--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Sample App</title>
   </head>
   <body>
-    <h1>Hello {{.data}}!!!</h1>
+    <h1>Hello world!!!</h1>
     <div>
       {{ range.book }}
       <ul>
