--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,28 @@
   <body>
     <h1>Hello world!!!</h1>
     <div>
-      {{ range.book }}
+      <form action="/new" method="post">
+        <p>
+          タイトル :<input
+            type="text"
+            name="title"
+            size="30"
+            placeholder="タイトル名"
+          />
+        </p>
+        <p>
+          説明 :<input
+            type="text"
+            name="description"
+            size="30"
+            placeholder="説明"
+          />
+        </p>
+        <p><input type="submit" value="Send" /></p>
+      </form>
+    </div>
+    <div>
+      {{ range.books }}
       <ul>
         <li>
           <b>{{.Title}}</b>
